--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pathway (1.16.3.5898)  experimental; urgency=high
+
+  * Common:Update daily build to handle latest libraries and PT8
+
+ -- Greg Trihus <greg_trihus@sil.org>  Tue, 08 Aug 2017 12:08:20 -0600
+
 pathway (1.16.0.5871)  experimental; urgency=high
 
   * Common:TD-3962 Update link to the student manual</li>
