--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-pathway (1.16.7.5920)  experimental; urgency=high
+pathway (1.16.8.5921)  experimental; urgency=high
 
   * Common: TD-4868 handle eliminating pictures
+  * Common: TD-4857 Reversal content to appear once not twice in PDF
 
- -- Greg Trihus <greg_trihus@sil.org>  Wed, 29 Nov 2017 09:02:20 -0600
+ -- Greg Trihus <greg_trihus@sil.org>  Wed, 29 Nov 2017 13:56:20 -0600
 
 pathway (1.16.6.5910)  experimental; urgency=high
 
