--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pathway (1.16.8.5921)  experimental; urgency=high
+
+  * Common: TD-4868 handle eliminating pictures
+  * Common: TD-4857 Reversal content to appear once not twice in PDF
+
+ -- Greg Trihus <greg_trihus@sil.org>  Wed, 29 Nov 2017 13:56:20 -0600
+
 pathway (1.16.6.5910)  experimental; urgency=high
 
   * Common: Outline Bookmarks
