Fix: TD-4198 Handle &(ampersand) in Title Page

--- a/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
@@ -61,7 +61,8 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{అ}}}}\end{center}
+
+ \setlength{\parskip}{18pt plus 1pt minus 2pt}{\topskip 18pt{\letterletHeaddicBody{అ}}}\end{center}
 
 \hangindent= 36pt
 \hangafter=1
@@ -71,10 +72,8 @@
 \end{center}
 
 
-
 \spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody{rice with tumeric}
 
-
-\headwordggoTeluxINentryletDatadicBody{అక్సెదంగ్}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{n}\xsensenumbersensesentryletDatadicBody{1}\spanendefinitionensensesensesentryletDatadicBody{rice with vermilion}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with vermilion}\xsensenumbersensesentryletDatadicBody{2}\spanendefinitionensensesensesentryletDatadicBody{rice mixed with vermilion thrown at a wedding, or on cattle (e.g. during 'laxmi pooja') in order to bless.}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with turmeric used to bless}\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody{గొవుర్ దన్ గోటమ్నె నొవ్రి నొవ్రనగ సమ్దిర్ అక్సెదాంగ్ వాటంతెర్.}\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody{At the wedding place, everyone throws rice on the bride andgroom.}\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody{$\sharp$పెండ్లి పందిరిలో పడుసు, వరులకు పసుపు బియ్యం వేస్తారు.}
+\headwordggoTeluxINentryletDatadicBody{అక్సెదంగ్}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{n}\xsensenumbersensesentryletDatadicBody{1}\spanendefinitionensensesensesentryletDatadicBody{rice with vermilion}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with vermilion}\xsensenumbersensesentryletDatadicBody{2}\spanendefinitionensensesensesentryletDatadicBody{rice mixed with vermilion thrown at a wedding, or on cattle (e.g. during \textsc{\char13}laxmi pooja\textsc{\char13}) in order to bless.}\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody{rice with turmeric used to bless}\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody{గొవుర్ దన్ గోటమ్నె నొవ్రి నొవ్రనగ సమ్దిర్ అక్సెదాంగ్ వాటంతెర్.}\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody{At the wedding place, everyone throws rice on the bride andgroom.}\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody{\#పెండ్లి పందిరిలో పడుసు, వరులకు పసుపు బియ్యం వేస్తారు.}
 
 \end{document}
