--- a/src/Test/XeLatex/TestFiles/Expected/PictureWidth.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PictureWidth.tex
@@ -48,7 +48,8 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{C c}}}}\end{center}
+\topskip 18pt{
+ \setlength{\parskip}{18pt plus 1pt minus 2pt}{\letterletHeaddicBody{C c}}}\end{center}
 \setlength{\columnsep}{0.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} 
@@ -60,9 +61,7 @@
 \end{center}
 
 
-
-\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightentryletDatadicBody{1}\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightentryletDatadicBody{cadu}
-\end{center}
+\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightentryletDatadicBody{1}\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightentryletDatadicBody{cadu}\end{center}
 
 \headwordsehentryletDatadicBody{cadu}\headwordsehentryletDatadicBody{ }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{N}\xlanguagetagenxitemptdefinitionLcptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLcptsensesensesentryletDatadicBody{pulga}\xlanguagetagenxitemendefinitionLcptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLcptsensesensesentryletDatadicBody{flea}
 
