--- a/src/Test/XeLatex/TestFiles/Expected/TwoColumnInputCase.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TwoColumnInputCase.tex
@@ -87,9 +87,7 @@
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} 
 \hangindent= 12pt
-\hangafter=1\begin{center}\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody{}
-\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody{rice with tumeric}
-\end{center}
+\hangafter=1\begin{center}\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody{}\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody{rice with tumeric}\end{center}
 
 \headwordggoTeluINentryletDatadicBody{అక్సెదంగ్}\headwordggoTeluINentryletDatadicBody{ }\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aksedaṅg}\pronunciationggofonipaxemicpronunciationsentryletDatadicBody{]}\pronunciationsentryletDatadicBody{ }
 
