--- a/src/Test/XeLatex/TestFiles/Expected/inputcasefw83alpha.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/inputcasefw83alpha.tex
@@ -91,15 +91,11 @@
 \begin{spacing}{0.5}
 \hangindent= 45pt
 \hangafter=1
-\spanbzhmainheadwordentryletData{waain}\markboth{ \spanbzhmainheadwordentryletData waain}{ \spanbzhmainheadwordentryletData waain}\spanbzhfonipaformpronunciationpronunciationsentryletData{ˈwaː.in}\spanenpartofspeechmorphosyntaxanalysissensesensecontentsensesentryletData{V1}\spanendefinitionorglosssensesensecontentsensesentryletData{to struggle, try hard, to struggle to climb out of something, as a hole.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Waain bë maḳ noh tena.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{He tried hard looking for a way to get out.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Luḳ waaḳ lom waain rot rëḳ ma menedo loḳ.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{He fell into the cave and he struggled hard to get out but he couldn't and he had to remain there.}\spanenabbreviationsemanticdomainsemanticdomainssensesensecontentsensesentryletData{4.8.1}\spanennamesemanticdomainsemanticdomainssensesensecontentsensesentryletData{Hostility}\spanenabbreviationsemanticdomainsemanticdomainssensesensecontentsensesentryletData{4.8.1.1}\spanennamesemanticdomainsemanticdomainssensesensecontentsensesentryletData{Oppose}\end{spacing}
+\spanbzhmainheadwordentryletData{waain}\markboth{ \spanbzhmainheadwordentryletData waain}{ \spanbzhmainheadwordentryletData waain}\spanbzhfonipaformpronunciationpronunciationsentryletData{ˈwaː.in}\spanenpartofspeechmorphosyntaxanalysissensesensecontentsensesentryletData{V1}\spanendefinitionorglosssensesensecontentsensesentryletData{to struggle, try hard, to struggle to climb out of something, as a hole.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Waain bë maḳ noh tena.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{He tried hard looking for a way to get out.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Luḳ waaḳ lom waain rot rëḳ ma menedo loḳ.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{He fell into the cave and he struggled hard to get out but he couldn\textsc{\char13}t and he had to remain there.}\spanenabbreviationsemanticdomainsemanticdomainssensesensecontentsensesentryletData{4.8.1}\spanennamesemanticdomainsemanticdomainssensesensecontentsensesentryletData{Hostility}\spanenabbreviationsemanticdomainsemanticdomainssensesensecontentsensesentryletData{4.8.1.1}\spanennamesemanticdomainsemanticdomainssensesensecontentsensesentryletData{Oppose}\end{spacing}
 \begin{spacing}{0.5}
 \hangindent= 45pt
 \hangafter=1
-\spanbzhmainheadwordentryletData{waaḳ}\markboth{ \spanbzhmainheadwordentryletData waaḳ}{ \spanbzhmainheadwordentryletData waaḳ}\spanbzhfonipaformpronunciationpronunciationsentryletData{waːq}\spanenpartofspeechmorphosyntaxanalysissensesensecontentsensesentryletData{n}\spanendefinitionorglosssensesensecontentsensesentryletData{cave, hole-a natural formation.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Waaḳ böpata ti neggëp vosnë.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{There's a huge cave in the bush.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Ya deggevek waaḳ.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{They went into the cave.}\spanenabbreviationsemanticdomainsemanticdomainssensesensecontentsensesentryletData{1.2.1.5}\spanennamesemanticdomainsemanticdomainssensesensecontentsensesentryletData{Underground}
-\spanensensenumberpicturepicturesentryletData{1}
-
-\spanencaptioncaptionpicturepicturesentryletData{waaḳ}
-
+\spanbzhmainheadwordentryletData{waaḳ}\markboth{ \spanbzhmainheadwordentryletData waaḳ}{ \spanbzhmainheadwordentryletData waaḳ}\spanbzhfonipaformpronunciationpronunciationsentryletData{waːq}\spanenpartofspeechmorphosyntaxanalysissensesensecontentsensesentryletData{n}\spanendefinitionorglosssensesensecontentsensesentryletData{cave, hole-a natural formation.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Waaḳ böpata ti neggëp vosnë.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{There\textsc{\char13}s a huge cave in the bush.}\spanbzhexampleexampleexamplessensesensecontentsensesentryletData{Ya deggevek waaḳ.}\spanentranslationtranslationtranslationsexampleexamplessensesensecontentsensesentryletData{They went into the cave.}\spanenabbreviationsemanticdomainsemanticdomainssensesensecontentsensesentryletData{1.2.1.5}\spanennamesemanticdomainsemanticdomainssensesensecontentsensesentryletData{Underground}\spanensensenumberpicturepicturesentryletData{1}\spanencaptioncaptionpicturepicturesentryletData{waaḳ}
 \end{spacing}\begin{spacing}{0.5}
 \hangindent= 45pt
 \hangafter=1
