--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pathway (1.16.11.5937)  experimental; urgency=high
+
+  * Common: Adjust app.config and GlobalAssemblyInfo references
+
+ -- Greg Trihus <greg_trihus@sil.org>  Thu, 4 Jan 2018 16:47:20 -0600
+
 pathway (1.16.10.5935)  experimental; urgency=high
 
   * Common: TD-4857 Reversal content to appear once not twice in PDF
