--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pathway (1.18.0.5980)  experimental; urgency=high
+
+  * Build using nuget dependencies
+
+ -- Greg Trihus <greg_trihus@sil.org>  Thu, 11 Mar 2021 12:50:00 -0600
+
 pathway (1.17.5.5974)  experimental; urgency=high
 
   * Styles:TD-4891 Make line2 and line2 poetry indents different (#40)
